--- a/app/src/main/res/menu/cart.xml
+++ b/app/src/main/res/menu/cart.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/cart"
         android:icon="@drawable/cart"
+        android:iconTint="@color/white"
         android:title="Cart"
         app:showAsAction="always" />
 
