--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EcommerceApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.EcommerceApp" parent="Theme.MaterialComponents.Light.NoActionBar">
 <!--         Customize your light theme here. -->
          <item name="colorPrimary">@color/pink</item>
          <item name="colorPrimaryVariant">@color/pink</item>
@@ -13,7 +13,7 @@
 
     </style>
 
-    <style name="Theme.EcommerceApp.ActionBar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.EcommerceApp.ActionBar" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!--         Customize your light theme here. -->
         <item name="colorPrimary">@color/pink</item>
         <item name="colorPrimaryVariant">@color/pink</item>
